redesigned cards, fixed contrast issues

--- a/cursor.css
+++ b/cursor.css
@@ -1,129 +1,138 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 .crazyFontsActive * {
-    cursor: default !important;
-    pointer-events: none !important;
+  cursor: crosshair !important;
 }
 
 .exitButton,
 .crazyFontsCursor,
 .infoCard {
-    font-family: "Poppins", Arial, sans-serif;
-    /* color: white; */
-    z-index: 99999;
+  font-family: "Poppins", Arial, sans-serif;
 }
 
 .exitButton,
 .crazyFontsCursor {
-    font-weight: 600;
-    position: fixed;
-    z-index: 999999999;
+  font-weight: 600;
+  position: fixed;
+  z-index: 999;
 }
 
 .exitButton {
-    top: 0;
-    right: 0;
-    margin: 0.5em;
-    cursor: pointer;
-    padding: 0.4em 0.75em;
-    font-size: 13px;
-    opacity: 0.8;
+  top: 0;
+  right: 0;
+  margin: 0.5em;
+  cursor: pointer;
+  padding: 0.4em 0.75em;
+  font-size: 16px;
+  opacity: 0.9;
 }
 
 .exitButton:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .crazyFontsCursor,
 .infoCard,
 .exitButton {
-    /* background-color: rgba(0, 0, 0, 0.1); */
-    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.075));
-    backdrop-filter: blur(30px);
-    box-shadow: 0 0 10px rgba(46, 54, 68, 0.05);
-    background-clip: padding-box;
-    border-radius: 15px;
+  color: white;
+  background: rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
+  box-shadow: 20px 20px 40px -6px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
 }
 
 .crazyFontsCursor {
-    pointer-events: none;
-    transform: translate(10px, 10px);
-    padding: 0.25em 0.75em;
-    font-size: 16px;
+  pointer-events: none;
+  transform: translate(10px, 10px);
+  padding: 0.25em 0.75em;
+  font-size: 16px;
 }
 
 .infoCard {
-    position: absolute;
-    max-width: 350px;
-}
-
-.infoCard::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(100%, -100%);
-    width: 0;
-    height: 0;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 10px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 0 10px rgba(46, 54, 68, 0.05);
-    backdrop-filter: blur(30px);
-}
-
-.infoCard div {
-    padding: 30px 30px 0 30px;
-}
-
-.infoCard div + div {
-    padding: 0 30px;
-    max-height: 0;
-    overflow: hidden;
-    animation: slide-in 600ms ease forwards;
-}
-
-@keyframes slide-in {
-    to {
-        /* Some bigger value the card will ever get */
-        max-height: 500px;
-        padding: 0 30px 30px 30px;
-    }
-}
-
-.infoCard h4 {
-    /* mix-blend-mode: difference; */
-    color: gray;
-    font-weight: 500;
-    font-size: 12px;
+  position: absolute;
+  width: 450px;
+  overflow: hidden;
+  z-index: 998;
 }
 
 .infoCard p {
-    mix-blend-mode: difference;
-    font-size: 15px;
-    margin: 0 0 10px 0;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.4);
 }
 
-.infoCard .color {
-    width: 10px;
-    height: 10px;
-    border: 2px solid black;
+.crazyFontsHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 16px;
 }
 
-.background-color {
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    border: 1px solid white;
-    margin-left: 0.5em;
+.crazyFontsHeader p {
+  margin: 0;
+  padding: 0;
+  color: white;
+  font-weight: 700;
+  font-size: 18px;
 }
 
 .crazyFontsCardExitBtn {
-    display: block;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 30px;
-    line-height: 1;
-    cursor: pointer;
+  font-size: 30px;
+  line-height: 1;
+  cursor: pointer;
+}
+
+.crazyFontsInformation {
+  max-height: 0;
+  overflow: hidden;
+  animation: slide-in 600ms ease forwards;
+  padding: 16px;
+}
+
+@keyframes slide-in {
+  to {
+    max-height: 500px;
+  }
+}
+
+.crazyFontsInformation > div {
+  display: flex;
+}
+
+.crazyFontsInformation > div > div {
+  flex: 1 1 100px;
+}
+
+.crazyFontsInformation h4 {
+  color: gray;
+  font-size: 12px;
+  line-height: 1.1;
+  margin: 0;
+  padding: 0;
+  color: rgba(255, 255, 255, 0.9);
+  font-weight: 400;
+}
+
+.crazyFontsInformation p {
+  margin: 4px 0 16px 0;
+  line-height: 1.1;
+  font-weight: 500;
+}
+
+.crazyFontsInformation .color {
+  width: 10px;
+  height: 10px;
+  border: 2px solid black;
+}
+
+.background-color {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  border: 1px solid white;
+  margin-left: 0.5em;
 }
